fix red colour contrast

--- a/public/css/colours.css
+++ b/public/css/colours.css
@@ -1,7 +1,7 @@
 :root {
   --colour-primary: hsl(33, 30%, 98%);
   --colour-secondary: hsl(185, 94%, 27%);
-  --colour-bold: hsl(4, 100%, 47%);
+  --colour-bold: hsl(4, 100%, 45%);
   --colour-text: hsl(33, 10%, 25%);
   --colour-dark: hsl(53, 8%, 15%);
   --colour-primary-dark: hsl(33, 42%, 78%);
